<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Catan</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_11">11</string>
    <string name="_10">10</string>
    <string name="_12">12</string>
    <string name="reset_string">Reset</string>
    <string name="last5Nums">Last 5 nums displayed here</string>

</resources>
