<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.prashgames.catan.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:onClick="serviceClick"
        android:text="@string/_2" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="12dp"
        android:onClick="serviceClick"
        android:text="@string/reset_string" />

    <Button
        android:id="@+id/button9"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignLeft="@+id/button5"
        android:onClick="serviceClick"
        android:text="@string/_9" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/button4"
        android:onClick="serviceClick"
        android:text="@string/_5" />

    <Button
        android:id="@+id/button8"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button7"
        android:layout_alignBottom="@+id/button7"
        android:layout_toLeftOf="@+id/button5"
        android:onClick="serviceClick"
        android:text="@string/_8" />

    <Button
        android:id="@+id/button11"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button10"
        android:layout_alignBottom="@+id/button10"
        android:layout_alignLeft="@id/button7"
        android:onClick="serviceClick"
        android:text="@string/_11" />

    <Button
        android:id="@+id/button12"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button11"
        android:layout_alignBottom="@+id/button11"
        android:layout_toLeftOf="@+id/button5"
        android:onClick="serviceClick"
        android:text="@string/_12" />

    <Button
        android:id="@+id/button10"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonReset"
        android:layout_alignLeft="@+id/button2"
        android:layout_marginBottom="11dp"
        android:onClick="serviceClick"
        android:text="@string/_10" />

    <TextView
        android:id="@+id/last5Nums"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button2"
        android:layout_alignLeft="@+id/button10"
        android:layout_alignTop="@+id/buttonReset"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="8dp"
        android:text="@string/last5Nums"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/graphLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignRight="@+id/buttonReset"
        android:layout_above="@id/button2"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_toLeftOf="@+id/button4"
        android:layout_alignTop="@id/button2"
        android:onClick="serviceClick"
        android:text="@string/_3" />

    <Button
        android:id="@+id/button7"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button12"
        android:layout_alignLeft="@+id/button3"
        android:layout_marginBottom="16dp"
        android:onClick="serviceClick"
        android:text="@string/_7" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="26dp"
        android:onClick="serviceClick"
        android:text="@string/_4" />

    <Button
        android:id="@+id/button6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button7"
        android:layout_alignBottom="@+id/button7"
        android:layout_alignLeft="@+id/button2"
        android:onClick="serviceClick"
        android:text="@string/_6" />

</RelativeLayout>